postgresql-8.3 (8.3~beta1-2) UNRELEASED; urgency=low

  * debian/control: Update -contrib description for new modules.

 -- Martin Pitt <mpitt@debian.org>  Sun, 14 Oct 2007 13:16:58 +0200

postgresql-8.3 (8.3~beta1-1) experimental; urgency=low

  * First beta release of PostgreSQL 8.3. Branch off the 8.2 packaging.
  * Drop debian/patches/12-m32r-tas.patch: Adopted upstream.
  * Drop debian/patches/04-timezone-symlinks.patch: Upstream now offers
    configure option --with-system-tzdata. Use it in debian/rules.
  * Drop debian/patches/50-contrib-enablemodules.patch: xml2 is now built
    conditionally. Supply --with-lib{xml,xslt} configure options in
    debian/rules.
  * Updated patches for new upstream version.
  * debian/control: Bump postgresql-common dependencies to >= 79 to ensure
    support of version 8.3.
  * debian/control: Do not build the versionless metapackages like
    'postgresql' until 8.3 is released and goes to unstable. Until then, 8.2
    should remain the default.
  * Add debian/patches/04-psql-passwordprompt.patch: Change psql to not prompt
    for a password if PGPASSWORD is given, just as in earlier versions.
    Without that, there is no way to suppress the password input prompt, which
    is bad for scripts.
  * Add debian/patches/12-pgpassfile-crash.patch: Fix crash (free'ing a static
    stack variable) in fe-connect.c.

 -- Martin Pitt <mpitt@debian.org>  Tue, 09 Oct 2007 16:28:51 +0200

postgresql-8.2 (8.2.5-1) unstable; urgency=low

  * New upstream bugfix release:
    - Require non-superusers who use "/contrib/dblink" to use only
      password authentication, as a security measure.
      [CVE-2007-3278, CVE-2007-3280]
    - Fix ALTER DOMAIN ADD CONSTRAINT for cases involving domains over
      domains.
    - Make "CREATE DOMAIN ... DEFAULT NULL" work properly.
    - Fix some planner problems with outer joins, notably poor size
      estimation for t1 LEFT JOIN t2 WHERE t2.col IS NULL.