@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Martin Pitt <mpitt@debian.org>
 Standards-Version: 3.7.2
 XS-Python-Version: current
-Build-Depends: debhelper (>= 5.0.37.2), cdbs (>= 0.4.43), perl (>= 5.8), libperl-dev, tcl8.4-dev, libreadline5-dev (>= 4.2), libssl-dev, zlib1g-dev | libz-dev, libpam0g-dev | libpam-dev, libxml2-dev, libkrb5-dev, libxslt1-dev, python-dev, python-central (>= 0.5), gettext, bzip2
+Build-Depends: debhelper (>= 5.0.37.2), cdbs (>= 0.4.43), perl (>= 5.8), libperl-dev, tcl8.4-dev, libreadline5-dev (>= 4.2), libssl-dev, zlib1g-dev | libz-dev, libpam0g-dev | libpam-dev, libxml2-dev, libkrb5-dev, libgssapi-dev, libldap2-dev, libxslt1-dev, python-dev, python-central (>= 0.5), gettext, bzip2
 
 Package: libpq-dev
 Architecture: any
