@@ -1,8 +1,10 @@
 postgresql-8.3 (8.3~beta1-2) UNRELEASED; urgency=low
 
   * debian/control: Update -contrib description for new modules.
+  * debian/{control,rules}: Enable GSSAPI and LDAP support and add build
+    dependencies libgssapi-dev and libldap2-dev.
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 14 Oct 2007 13:16:58 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sun, 14 Oct 2007 13:30:32 +0200
 
 postgresql-8.3 (8.3~beta1-1) experimental; urgency=low
 
